# mastermold

./: .env  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  SKILLS.md  config.yml  instrumentation.ts  launch-build.sh  next.config.ts  package-lock.json  package.json  runbook.md  spec.md  tailwind.config.ts  tasks.json
.claude/: label-map.json  settings.json
.scaffold/: events.jsonl
.scaffold-debug/: task_generation_raw_attempt_1.json.txt
.well-known/: rds-deploy-fingerprint.json
app/: error.tsx  globals.css  layout.tsx  loading.tsx  manifest.ts  page.tsx
components/: activity-loading-state.tsx  alert-feed.tsx  alert-inbox-drawer-content.tsx  alert-inbox-drawer.tsx  app-shell.tsx  as-of-replay-control.tsx  automation-health-banner.tsx  autopilot-panel.tsx  autopilot-terminal.tsx  brain-initialization-panel.tsx  briefing-card.tsx  chat-loading-state.tsx  chat-workspace.tsx  command-console.tsx  copy-redacted-packet-button.tsx  daily-report-refresh-button.tsx  executor-workspace.tsx  face-activity.tsx  forward-trial-starter.tsx  global-assistant.tsx  integration-key-input.tsx  journal-loading-state.tsx  journal-workspace.tsx  login-panel.tsx  manual-holdings-panel.tsx  master-mold-actions.tsx  master-mold-head-3d.tsx  monarch-mcp-panel.tsx  nav-pending.tsx  notification-test-button.tsx  open-alerts-action.tsx  operator-workflow-panel.tsx  page-header.tsx  paper-loading-state.tsx  paper-workspace.tsx  portfolio-analysis-drawer.tsx  portfolio-charts.tsx  portfolio-loading-state.tsx  portfolio-monarch-sync-button.tsx  position-policies-panel.tsx  (+30 more)
data/: demo-seed.json
db/: seeds.rb
docs/: ARCHITECTURE.md  BACKLOG.md  DEPLOYMENT.md  OPERATIONS.md  PRIVACY.md  README.md  SECURITY.md  ZO-MIGRATION.md  autonomous-trading-reorientation.md  deploy-zo.md  mobile-native-product-overhaul-plan.md  web3-credentials-runbook.md
engine/: .env.example  .gitignore  CONTRACT.md  README.md  config.yml  pyproject.toml
engine/mastermold_engine/: __init__.py  adapter.py  beliefs.py  conviction.py  cost.py  data_cache.py  export.py  journal_bridge.py  resolve_outcomes.py  run_briefing.py  schemas.py  screener.py
engine/ml/: __init__.py  data.py  events.py  features.py  infer.py  labels.py  model.py  train.py
engine/ml/fixtures/: barrier-parity.json  cusum-parity.json
engine/tests/: journal_fixture.py  make_fixtures.py  test_deterministic.py  test_integration.py  test_ml.py
lib/: alert-loop.ts  briefing-journal-copy.ts  chat-copy.ts  chat-route-hints.ts  client-fetch-cache.ts  client-hash-scroll.ts  journal-copy.ts  master-mold-command-handoff.ts  (+14 more)
(+458 files in other folders)
