[project]
name = "mastermold-engine"
version = "0.1.0"
description = "TradingAgents wrapped as the staged, screener-gated funnel behind MasterMold."
requires-python = ">=3.10"
dependencies = [
    # Pin the MasterMold fork of TradingAgents (Apache 2.0). Keep upstream as a remote
    # for cheap rebases; our delta is additive (two ResearchPlan fields, one PM field,
    # one DriverList schema, cache_control). See engine/README.md and schemas.py.
    # "tradingagents @ git+https://github.com/<your-org>/TradingAgents@mastermold",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    # yfinance/pandas/numpy arrive transitively via tradingagents' dataflows layer.
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
engine-briefing = "mastermold_engine.run_briefing:main"
engine-resolve = "mastermold_engine.resolve_outcomes:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mastermold_engine"]
